--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,11 @@
 name: CI
 run-name: ${{ github.actor }} started ci
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
 jobs:
-  commits-check:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -21,8 +24,21 @@ jobs:
       run: npm run test-ci
     - name: Run tests
       run: npm test
-    - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./test-report.html
+  enforce-status-checks:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check status checks
+        run: |
+          # Check if the required status checks have passed
+          if [ "$GITHUB_EVENT_NAME" == "pull_request" ]; then
+            checks_status=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/status" \
+              | jq -r '.state')
+
+            if [ "$checks_status" != "success" ]; then
+              echo "Required status checks have not passed. Cannot merge."
+              exit 1
+            fi
+          fi
