--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,17 +16,7 @@ jobs:
         run: |
           echo "::set-output name=author::${{ github.actor }}"
           echo "::set-output name=date::${{ github.event.head_commit.timestamp }}"
-          echo "::set-output name=version::${{ github.ref }}"
-      - name: Create Release
-        uses: marvinpinto/action-automatic-releases@v1.2.1
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_name: ${{ steps.release_info.outputs.version }}
-          release_name: ${{ steps.release_info.outputs.version }}
-          automatic_release_tag: v${{ steps.release_info.outputs.version | replace('refs/tags/v', '') }}
-          draft: false
-          prerelease: false
-          files: ''
+          echo "::set-output name=version::${{ github.ref | replace('refs/tags/v', '') }}"
   create_issue:
     needs: create_release
     runs-on: ubuntu-latest
