--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,16 @@ jobs:
           echo "::set-output name=author::${{ github.actor }}"
           echo "::set-output name=date::${{ github.event.head_commit.timestamp }}"
           echo "::set-output name=version::${{ github.ref | replace('refs/tags/v', '') }}"
+      - name: Create Release
+        uses: marvinpinto/action-automatic-releases@v1.2.1
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ steps.release_info.outputs.version }}
+          release_name: ${{ steps.release_info.outputs.version }}
+          draft: false
+          prerelease: false
+          files: ''
+          automatic_release_tag: v${{ steps.release_info.outputs.version }}
   create_issue:
     needs: create_release
     runs-on: ubuntu-latest
