--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: CI
 run-name: ${{ github.actor }} started ci
-on:
-  pull_request:
-    branches:
+on: 
+  push:
+    branches-ignore:
       - main
 jobs:
   build-and-test:
@@ -16,6 +16,8 @@ jobs:
         else
           npm install
        fi
+    - name: Check commit message
+      run: npx commitlint --from="$GITHUB_SHA^" --to="$GITHUB_SHA"
     - name: Install playwright 
       run: npx playwright install
     - name: Run e2e-ci tests
@@ -32,7 +34,7 @@ jobs:
       - name: Check status checks
         run: |
           # Check if the required status checks have passed
-          if [ "$GITHUB_EVENT_NAME" == "pull_request" ]; then
+          if [ "$GITHUB_EVENT_NAME" == "push" ]; then
             checks_status=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
               "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/status" \
               | jq -r '.state')
