--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Check status checks
         run: |
           # Check if the required status checks have passed
-          if [ "$GITHUB_EVENT_NAME" == "push" ]; then
+          if [ "$GITHUB_EVENT_NAME" == "pull_request" ]; then
             checks_status=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
               "https://api.github.com/repos/${{ github.repository }}/commits/${{ github.event.pull_request.head.sha }}/status" \
               | jq -r '.state')
