--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,43 +9,29 @@ jobs:
   create_release:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Get release information
-        id: release_info
+      - name: Check if tag exists
+        id: check_tag
         run: |
-          echo "::set-output name=author::${{ github.actor }}"
-          echo "::set-output name=date::${{ github.event.head_commit.timestamp }}"
-          echo "::set-output name=version::${{ env.GITHUB_REF }} ! sed -e 's/refs\/tags\/v//')"
-      - name: Create Release
-        uses: marvinpinto/action-automatic-releases@v1.2.1
+          tag_exists=$(git tag -l "${{ github.ref }}")
+          echo "::set-output name=tag_exists::${tag_exists}"
+      
+      - name: Create or update release
+        id: create_or_update_release
+        uses: avakar/tag-and-release@v1
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          tag_name: ${{ steps.release_info.outputs.version }}
-          release_name: ${{ steps.release_info.outputs.version }}
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
           draft: false
           prerelease: false
-          files: ''
-          automatic_release_tag: v${{ steps.release_info.outputs.version }}
-  create_issue:
-    needs: create_release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create Issue
-        uses: actions/github-script@v4
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const { data } = await github.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: 'New Release',
-              body: `
-                Author: ${{ needs.create_release.outputs.author }}
-                Date: ${{ needs.create_release.outputs.date }}
-                Version: ${{ needs.create_release.outputs.version }}
-                Changelog: {changelog}
-              `,
-              labels: ['RELEASE']
-            });
-            console.log('Issue created:', data.html_url);
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get release URL
+        id: get_release_url
+        run: |
+          echo "::set-output name=html_url::https://github.com/${{ github.repository }}/releases/tag/${{ github.ref }}"
+
+      - name: Get upload URL
+        id: get_upload_url
+        run: |
+          echo "::set-output name=upload_url::https://github.com/${{ github.repository }}/releases/${{ steps.create_or_update_release.outputs.id }}/assets"
