--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,31 +4,77 @@ run-name: ${{ github.actor }} started Release
 on:
   push:
     tags:
-      - "v[0-9]*"
+      - v*
 
 permissions:
-  contents: read
+  contents: write
   issues: write
 
 jobs:
-  create-issue:
+  unit:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          fetch-depth: 0
+          node-version: 16
+      - run: npm ci
+      - run: npm test
 
-      - name: set up environment
-        run: |
-          echo "COMMIT_TIME=$(git show -s --format=%ci ${{ github.sha }})" >> $GITHUB_ENV
-          echo "COMMIT_BEFORE=${{github.event.before}}" >> $GITHUB_ENV
-          echo "COMMIT_AFTER=${{github.event.after}}" >> $GITHUB_ENV
-
-      - name: create release issue
-        uses: actions/github-script@v6
+  e2e:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          github-token: ${{ secrets.TOKEN }}
-          script: |
-            const script = require('.github/workflows/scripts/release.js');
-            await script({ github, context, exec, TAG: "${{ github.ref_name }}" });
+          node-version: 16
+      - run: npm ci
+      - run: npm run build
+      - run: npx playwright install
+      - run: npm run e2e
+
+  release:
+    needs: [unit, e2e]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - run: echo ${{ github.ref }}
+
+      - name: changelog
+        id: changelog
+        uses: mikepenz/release-changelog-builder-action@v4.0.0-rc03
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: release
+        id: release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: RELEASE ${{ github.ref }}
+          body: ${{ steps.changelog.outputs.changelog }}
+          draft: false
+          prerelease: false
+
+      - name: issue
+        id: issue
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh issue create --title "RELEASE ${{ github.ref }}" --body "Дата релиза,  Автор, Версия релиза ${{ github.ref }},  changelog ${{ steps.changelog.outputs }}"
+
+
+  deploy:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm run build
+      - uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build
