--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: npm test
+      - run: npm test-ci
 
   e2e:
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npx playwright install
-      - run: npm run e2e
+      - run: npm run e2e-ci
 
   release:
     needs: [unit, e2e]
