--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: npm test-ci
+      - run: npm test
 
   e2e:
     runs-on: ubuntu-latest
