--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -62,7 +62,7 @@ jobs:
         id: issue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh issue create --title "RELEASE ${{ github.ref }}" --body "Дата релиза - ${{ github.event.head_commit.timestamp }}, Автоh - ${{ github.actor }}, Версия релиза - ${{ github.ref_name }},  changelog - ${{ steps.changelog.outputs..changelog }}"
+        run: gh issue create --title "RELEASE ${{ github.ref }}" --body "Дата релиза - ${{ github.event.head_commit.timestamp }}, Автоh - ${{ github.actor }}, Версия релиза - ${{ github.ref_name }},  changelog - ${{ steps.changelog.outputs.changelog }}"
 
 
   deploy:
