--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,6 +43,97 @@ jobs:
       - name: changelog
         id: changelog
         uses: mikepenz/release-changelog-builder-action@v4.0.0-rc03
+        with:
+          configurationJson: |
+            {
+              "template": "#{{CHANGELOG}}\n\n<details>\n<summary>Uncategorized</summary>\n\n#{{UNCATEGORIZED}}\n</details>",
+              "categories": [
+                {
+                  "title": "## 🚀 Features",
+                  "labels": ["feature"]
+                },
+                {
+                  "title": "## 🐛 Fixes",
+                  "labels": ["fix"]
+                },
+                {
+                  "key": "tests",
+                  "title": "## 🧪 Tests",
+                  "labels": ["test"]
+                },
+                {
+                  "title": "## 🧪 Tests and some 🪄 Magic",
+                  "labels": ["test", "magic"],
+                  "exclude_labels": ["no-magic"],
+                  "exhaustive": true,
+                  "exhaustive_rules": "false",
+                  "empty_content": "- no matching PRs",
+                  "rules": [
+                    {
+                      "pattern": "open",
+                      "on_property": "status",
+                      "flags": "gu"
+                    }
+                  ]
+                }
+              ],
+              "ignore_labels": [
+                "ignore"
+              ],
+              "sort": {
+                "order": "ASC",
+                "on_property": "mergedAt"
+              },
+              "template": "${{CHANGELOG}}\n\n<details>\n<summary>Uncategorized</summary>\n\n${{UNCATEGORIZED}}\n</details>",
+              "pr_template": "- ${{TITLE}}\n   - PR: #${{NUMBER}}",
+              "empty_template": "- no changes",
+              "label_extractor": [
+                {
+                  "pattern": "(.) (.+)",
+                  "target": "$1",
+                  "flags": "gu"
+                },
+                {
+                  "pattern": "\\[Issue\\]",
+                  "on_property": "title",
+                  "method": "match"
+                }
+              ],
+              "duplicate_filter": {
+                "pattern": "\\[ABC-....\\]",
+                "on_property": "title",
+                "method": "match"
+              },
+              "reference": {
+                "pattern": ".*\\ \\#(.).*",
+                "on_property": "body",
+                "method": "replace",
+                "target": "$1"
+              },
+              "transformers": [
+                {
+                  "pattern": "[\\-\\*] (\\[(...|TEST|CI|SKIP)\\])( )?(.+?)\n(.+?[\\-\\*] )(.+)",
+                  "target": "- $4\n  - $6"
+                }
+              ],
+              "trim_values": false,
+              "max_tags_to_fetch": 200,
+              "max_pull_requests": 200,
+              "max_back_track_time_days": 365,
+              "exclude_merge_branches": [
+                "Owner/qa"
+              ],
+              "tag_resolver": {
+                "method": "semver",
+                "filter": {
+                  "pattern": "api-(.+)",
+                  "flags": "gu"
+                }
+              },
+              "base_branches": [
+                "dev"
+              ]
+            }
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -62,7 +153,7 @@ jobs:
         id: issue
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh issue create --title "RELEASE ${{ github.ref_name }}" --body "Дата релиза - ${{ github.event.head_commit.timestamp }},\n Автоh - ${{ github.actor }},\n Версия релиза - ${{ github.ref_name }},\n  changelog с тега -  ${{ steps.changelog.outputs.fromTag }}, до тега  ${{ steps.changelog.outputs.toTag }} \n- ${{ steps.changelog.outputs.changelog }}"
+        run: gh issue create --title "RELEASE ${{ github.ref_name }}" --body "Дата релиза - ${{ github.event.head_commit.timestamp }}, Автоh - ${{ github.actor }}, Версия релиза - ${{ github.ref_name }},  *changelog* статусс наличия ошибки - ${{ steps.changelog.outputs.failed }}, ${{ steps.changelog.outputs.fromTag }}, до тега  ${{ steps.changelog.outputs.toTag }} - ${{ steps.changelog.outputs.changelog }}"
 
 
   deploy:
